Orbit view degrees don't add up correctly because of "Smooth View" #48340

Closed
opened 2016-05-03 12:29:29 +02:00 by Adam Preisler · 7 comments

System Information
Irrelevant

Blender Version
2.76, pretty sure it's in 2.77 also.

Short description of error
If you use the second orbit view fast enough before the first's "Smooth View" finishes, the degrees are messed up. Orbit view is usually 15 degrees, but since you hit the key/other shortcut fast enough when the view is like halfway through the "Smooth View" process it doesn't add up as 30 degrees but like 26 instead. This is a problem for me because I usually like the smooth view, it is better to see the slower view change than be confused for a short moment.

I bound orbit view from NUMPAD to Alt+ mouse roller and Shift + mouse roller so a lot of times I am faster and therefore the complete angle is 84 or 87 degrees instead of 90 and I have to redo the whole process.

Exact steps for others to reproduce the error
Use orbit view (NUM4, 6, 8 or 2) fast enough and have "Smooth View" in User Preferences > Interface enabled.

**System Information** Irrelevant **Blender Version** 2.76, pretty sure it's in 2.77 also. **Short description of error** If you use the second orbit view fast enough before the first's "Smooth View" finishes, the degrees are messed up. Orbit view is usually 15 degrees, but since you hit the key/other shortcut fast enough when the view is like halfway through the "Smooth View" process it doesn't add up as 30 degrees but like 26 instead. This is a problem for me because I usually like the smooth view, it is better to see the slower view change than be confused for a short moment. I bound orbit view from NUMPAD to Alt+ mouse roller and Shift + mouse roller so a lot of times I am faster and therefore the complete angle is 84 or 87 degrees instead of 90 and I have to redo the whole process. **Exact steps for others to reproduce the error** Use orbit view (NUM4, 6, 8 or 2) fast enough and have "Smooth View" in User Preferences > Interface enabled.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2016-05-03 16:50:24 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42, this is more like a TODO, but in IRC you mentioned you want to check something here?

@ideasman42, this is more like a TODO, but in IRC you mentioned you want to check something here?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 568514c875

This issue was referenced by 568514c875d47def3bd05c89b4c03c7a1ece35bc
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48340
No description provided.